--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "test-router",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://g4rv.github.io/test-router/",
   "type": "module",
   "scripts": {
     "dev": "vite",
